REOPENED299000
lostpointercapture may not be fired before other subsequent events for the pointer after capture is lost
https://bugs.webkit.org/show_bug.cgi?id=299000
Summary lostpointercapture may not be fired before other subsequent events for the po...
Lily Spiniolas
Reported 2025-09-16 23:30:39 PDT
See https://w3c.github.io/pointerevents/#dfn-lostpointercapture: "This event MUST be fired prior to any subsequent events for the pointer after capture was released." This is not always the case; we fail the third subtest of the wpt test pointerevents/pointerevent_lostpointercapture_for_disconnected_node.html as a result.
Attachments
Lily Spiniolas
Comment 1 2025-09-16 23:31:52 PDT
Lily Spiniolas
Comment 2 2025-09-16 23:44:29 PDT
EWS
Comment 3 2025-09-18 10:38:50 PDT
Committed 300168@main (54f983fffa57): <https://commits.webkit.org/300168@main> Reviewed commits have been landed. Closing PR #50839 and removing active labels.
Lily Spiniolas
Comment 4 2025-09-19 15:35:48 PDT
Lily Spiniolas
Comment 5 2025-09-19 15:35:50 PDT
EWS
Comment 6 2025-09-19 17:43:47 PDT
Committed 300269@main (e6eb5d5b8ef3): <https://commits.webkit.org/300269@main> Reviewed commits have been landed. Closing PR #51035 and removing active labels.
Lily Spiniolas
Comment 7 2025-09-19 19:53:19 PDT
Lily Spiniolas
Comment 8 2025-09-24 15:49:29 PDT
Note You need to log in before you can comment on or make changes to this bug.