Source/WebKitLegacy/mac/WebCoreSupport/WebChromeClient.h
@@ -254,6 +254,8 @@ private:
 
     void requestCookieConsent(CompletionHandler<void(WebCore::CookieConsentDecisionResult)>&&) final;
 
+    bool supportsEventSuppression() final { return false; }
+
 #if ENABLE(VIDEO_PRESENTATION_MODE)
     bool m_mockVideoPresentationModeEnabled { false };
 #endif
